@@ -1,1 +1,2 @@
 Changes in current version:
+ o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.  
